<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.rono</groupId>
  <artifactId>igniscore-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>igniscore-parent</name>

  <modules>
    <module>api</module>
    <module>common</module>
    <module>extensions</module>
    <module>spigot</module>
    <module>paper</module>
    <module>sponge</module>
    <module>bootstrap</module>
  </modules>

  <properties>
    <revision>1.0.0</revision>
    <java.version>25</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <guice.version>7.0.0</guice.version>
    <junit.jupiter.version>6.1.0</junit.jupiter.version>
    <mockbukkit.version>4.108.0</mockbukkit.version>
    <adventure.version>4.26.1</adventure.version>
    <spigot.api.version>1.21.11-R0.1-SNAPSHOT</spigot.api.version>
    <paper.api.version>1.21.11-R0.1-SNAPSHOT</paper.api.version>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <release>${java.version}</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.6.0</version>
          <configuration>
            <updatePomFile>true</updatePomFile>
            <flattenMode>resolveCiFriendliesOnly</flattenMode>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>spongepowered</id>
      <url>https://repo.spongepowered.org/maven</url>
    </repository>
    <repository>
      <id>codemc-repo</id>
      <url>https://repo.codemc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>dmulloy2-repo</id>
      <url>https://repo.dmulloy2.net/repository/public/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.rono</groupId>
        <artifactId>api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.rono</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.rono</groupId>
        <artifactId>spigot-v1-21-x</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.rono</groupId>
        <artifactId>paper-v1-21-x</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.rono.blocks</groupId>
        <artifactId>quarry-cache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>
      <dependency>
        <groupId>org.spigotmc</groupId>
        <artifactId>spigot-api</artifactId>
        <version>${spigot.api.version}</version>
      </dependency>
      <dependency>
        <groupId>net.kyori</groupId>
        <artifactId>adventure-api</artifactId>
        <version>${adventure.version}</version>
      </dependency>
      <dependency>
        <groupId>net.kyori</groupId>
        <artifactId>adventure-text-serializer-legacy</artifactId>
        <version>${adventure.version}</version>
      </dependency>
      <dependency>
        <groupId>net.kyori</groupId>
        <artifactId>adventure-text-serializer-plain</artifactId>
        <version>${adventure.version}</version>
      </dependency>
      <dependency>
        <groupId>net.kyori</groupId>
        <artifactId>adventure-text-minimessage</artifactId>
        <version>${adventure.version}</version>
      </dependency>
      <dependency>
        <groupId>net.kyori</groupId>
        <artifactId>adventure-platform-bukkit</artifactId>
        <version>4.4.1</version>
      </dependency>
      <dependency>
        <groupId>io.papermc.paper</groupId>
        <artifactId>paper-api</artifactId>
        <version>${paper.api.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.10.1</version>
      </dependency>
      <dependency>
        <groupId>de.tr7zw</groupId>
        <artifactId>item-nbt-api-plugin</artifactId>
        <version>2.15.7</version>
      </dependency>
      <dependency>
        <groupId>net.dmulloy2</groupId>
        <artifactId>ProtocolLib</artifactId>
        <version>5.1.0</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockbukkit.mockbukkit</groupId>
        <artifactId>mockbukkit-v1.21</artifactId>
        <version>${mockbukkit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
